src/objects/Application_Status_Change__e.object
<CustomObject>
    <description>Used to request an update to Lead.Partner_Application_Status__c for the associated records</description>
    <fields>
        <fullName>CaseId__c</fullName>
        <label>CaseId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadId__c</fullName>
        <label>LeadId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <label>OpportunityId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Application Status Change</label>
    <pluralLabel>Application Status Changes</pluralLabel>
</CustomObject>